--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,8 +1,12 @@
 <footer role="contentinfo">
-  <p>src/partials/footer.html</p>
+  <p><code>src/partials/footer.html</code></p>
+  <hr>
   <nav>
-    <a href="https://github.com/mckabi/snowpack-posthtml">@mckabi/snowpack-posthtml</a>
-    <a href="https://www.snowpack.dev/">Snowpack</a>
-    <a href="https://posthtml.org/">posthtml</a>
+    See also:
+    <ul>
+      <li><a href="https://github.com/mckabi/snowpack-posthtml">@mckabi/snowpack-posthtml</a></li>
+      <li><a href="https://www.snowpack.dev/">Snowpack</a></li>
+      <li><a href="https://posthtml.org/">PostHTML</a></li>
+    </ul>
   </nav>
 </footer>
